gator_versioned_docs/version-1.6.0/reference/x402.md
---
description: Smart Accounts Kit x402 API methods reference.
sidebar_label: x402
toc_max_heading_level: 2
keywords: [x402, delegation provider, experimental, API, methods, reference]
---

import GlossaryTerm from '@theme/GlossaryTerm';
import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

# x402 API reference

The following API methods are related to x402 to create payments using <GlossaryTerm term="Delegation">delegation</GlossaryTerm>.

## `createx402DelegationProvider`

Creates a delegation provider function too be used with `x402Erc7710Client`.

The provider resolves creates an <GlossaryTerm term="Open delegation">open delegation</GlossaryTerm>, signs it, and returns an ABI-encoded delegation
chain as a hex string. The provider internally appends redeemer, payee, and expiry <GlossaryTerm term="Caveat">caveats</GlossaryTerm> when the
existing caveats, or the <GlossaryTerm term="Root delegation">root delegation</GlossaryTerm> doesn't have it.

### Parameters

| Name                      | Type                                                                                                                    | Required | Description                                                                                                                                                                                                                                                                                                                                                                       |
| ------------------------- | ----------------------------------------------------------------------------------------------------------------------- | -------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `account`                 | [`MaybeDeferred`](./types.md#maybedeferred)<br/>`<Account>`                                                             | Yes      | The Viem Account that signs the <GlossaryTerm term="Delegation">delegation</GlossaryTerm>.                                                                                                                                                                                                                                                                                        |
| `environment`             | [`MaybeDeferred`](./types.md#maybedeferred)<br/>`<`[`SmartAccountsEnvironment`](./types.md#smartaccountsenvironment)`>` | No       | Environment to resolve the smart contracts for the current chain. If omitted, resolved automatically from the chain ID in the payment requirements.                                                                                                                                                                                                                               |
| `from`                    | [`MaybeDeferred`](./types.md#maybedeferred)<br/>`<Hex>`                                                                 | No       | The address that is granting the <GlossaryTerm term="Delegation">delegation</GlossaryTerm>. The default is `account`.                                                                                                                                                                                                                                                             |
| `salt`                    | [`MaybeDeferred`](./types.md#maybedeferred)<br/>`<Hex>`                                                                 | No       | The salt for generating the delegation hash. The default is a random 32-byte value.                                                                                                                                                                                                                                                                                               |
| `caveats`                 | [`MaybeDeferred`](./types.md#maybedeferred)<br/>`<Caveats>`                                                             | No       | <GlossaryTerm term="Caveat">Caveats</GlossaryTerm> that further refine the authority granted by the <GlossaryTerm term="Delegation">delegation</GlossaryTerm>. [`redeemer`](./delegation/caveats.md#redeemer), [`allowedTargets`](./delegation/caveats.md#allowedtargets), and [`timestamp`](./delegation/caveats.md#timestamp) caveats are auto-appended if not already present. |
| `parentPermissionContext` | [`MaybeDeferred`](./types.md#maybedeferred)<br/>`<PermissionContext>`                                                   | No       | Parent chain as `Hex` or as decoded [`Delegation`](./types.md#delegation) values (leaf first). Use this when creating a <GlossaryTerm term="Redelegation">redelegation</GlossaryTerm>.                                                                                                                                                                                            |
| `expirySeconds`           | [`MaybeDeferred`](./types.md#maybedeferred)<br/>`<number>`                                                              | No       | Relative expiry in seconds. Adds a timestamp caveat if no tighter constraint exists.                                                                                                                                                                                                                                                                                              |
| `redeemers`               | [`MaybeDeferred`](./types.md#maybedeferred)<br/>`<`[`RedeemersConfig`](./types.md#redeemersconfig)`>`                   | No       | Constrains the addresses that are allowed to redeem the <GlossaryTerm term="Delegation">delegation</GlossaryTerm>. Use this to restrict redemption to specific facilitators.                                                                                                                                                                                                      |

### Example

<Tabs>
<TabItem value="delegation" label="Delegation">

```ts
import { privateKeyToAccount } from 'viem/accounts'
import { createx402DelegationProvider } from '@metamask/smart-accounts-kit/experimental'
import { x402Erc7710Client } from '@metamask/x402'

const account = privateKeyToAccount(privateKey)

const erc7710Client = new x402Erc7710Client({
  delegationProvider: createx402DelegationProvider({
    account,
  }),
})
```

</TabItem>
<TabItem value="redelegation" label="Redelegation">

```ts
import { createx402DelegationProvider } from '@metamask/smart-accounts-kit/experimental'

const parentPermissionContext = '0x...' // Previously stored/issued permission context.

const delegationProvider = createx402DelegationProvider({
  account,
  parentPermissionContext,
})
```

</TabItem>
</Tabs>

## `parseEip155ChainId`

Parses an [EIP-155 CAIP](https://namespaces.chainagnostic.org/eip155/caip2) network identifier into a numeric chain ID.

### Parameters

| Name      | Type     | Required | Description                                               |
| --------- | -------- | -------- | --------------------------------------------------------- |
| `network` | `string` | Yes      | EIP-155 CAIP network identifier. For example, `eip155:1`. |

### Example

```ts
import { parseEip155ChainId } from '@metamask/smart-accounts-kit/experimental'

// Returns 137
const chainId = parseEip155ChainId('eip155:137')
```
